<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/content_padding_xlarge"
            android:paddingRight="@dimen/content_padding_xlarge">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_name"
                style="@style/MyMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_margin_normal"
                android:layout_marginTop="@dimen/content_margin_normal"
                android:hint="@string/hint_input_account"
                android:inputType="text"
                app:met_hideUnderline="false"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/met_pass"
                style="@style/MyMaterialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_margin_normal"
                android:layout_marginTop="@dimen/content_margin_normal"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                app:met_hideUnderline="false"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <CheckedTextView
                    android:id="@+id/cbx_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_password"/>
            </LinearLayout>

            <com.flyco.roundview.RoundTextView
                android:id="@+id/rtv_login"
                style="@style/MyTextName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_button_height"
                android:layout_marginTop="@dimen/content_margin_xlarge"
                android:gravity="center"
                android:text="@string/login_button"
                android:textColor="@color/color_text_white"
                app:rv_backgroundColor="@color/sys_normal"
                app:rv_cornerRadius="@dimen/content_margin_xxlarge"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>