<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/t_card_1"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/content_padding_xlarge">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_margin_normal"
            android:text="@string/version_update"
            android:textColor="@color/color_text"
            android:textSize="@dimen/content_txt_size_xxlarge"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/vl"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin_xlarge"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/down_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/versioncode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:singleLine="false"
                android:textColor="@color/color_text"
                android:textStyle="bold"/>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/down_load"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_normal">

            <ProgressBar
                android:id="@+id/ziliao_load"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:progress="23"
                android:progressDrawable="@drawable/loading_drawable"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/ziliao_statue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="28%"
                android:textColor="@color/color_text"
                android:textSize="@dimen/content_txt_size_large"
                android:textStyle="bold"
                android:visibility="visible"/>
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/vl"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:padding="@dimen/content_padding_xlarge">

        <LinearLayout
            android:id="@+id/btnexit"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/content_margin_normal"
            android:layout_weight="1"
            android:background="@drawable/btn_add"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/immediate_update"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btncan"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/content_margin_normal"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_txt_can"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ignore_update"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btndel"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel_update"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>